public_html/css/views.css
/*
	REGISTER VIEW
			*/
.registrationFormWrapper form > label{
	display:block;
}
.registrationFormWrapper form > input{
	display:block;
}


.regForm label {
	display:block;
}
.regForm .submit {
	display:block;
}
#msg {
	display:none; 
	position:absolute; 
	z-index:200; 
	background:url(../js/images/msg_arrow.gif) left center no-repeat; 
	padding-left:7px;
}
#msgcontent {
	display:block; 
	background:#f3e6e6; 
	border:2px solid #924949; 
	border-left:none; 
	padding:5px; 
	min-width:150px; 
	max-width:250px;
}
#msg2 {
	display:none; 
	position:absolute; 
	z-index:200; 
	background:url(../js/images/msg_arrow2.png) left center no-repeat; 
	padding-left:7px;
}
#msgcontent2 {
	display:block; 
	background:#c5fab1; 
	border:2px solid #3e9c1c; 
	border-left:none; 
	padding:5px; 
	min-width:150px; 
	max-width:250px;
}

/*
	NEW CLASS VIEW
			*/
#classDescriptionField {
	width:767px;
	height:80px;
	resize:vertical;
}
.new_class label {
	display:block;
}

/*
	PROFILE VIEW
			*/
#invalidIcon {
	position: relative;
	top: 3px;
}
#validateHref {
	font-size: 8pt;
	text-decoration: none;
}
#validateHref:hover {
	text-decoration: underline;
}

/*
	EDIT PROFILE VIEW
				*/
.editProfileWrapper  label {
	display:block;
}
.bioTextarea {
	width:767px;
	height:80px;
	resize:vertical;
}
div#receiveUrgents {
	display: inline;
	font-size: 8pt;
}
#receiveUrgents  input{
	margin-right: 5px;
	top: 2px;
	position: relative;
	margin-left: 10px;
}
/*
	EDIT CLASS VIEW
				*/
.editClassWrapper  label {
	display:block;
}
.descriptionTextarea {
	width:767px;
	height:80px;
	resize:vertical;
}
.newClassAssociationFieldset label,input{
	display:inline !important;
}
/*
	ASSOCIATIONS VIEW
				*/

.associationTable {

}
.classAssociationCheck {
	margin-right: 5px;
	margin-left: 5px;
	margin-top: 3px;
	float: left;
}
.newClassAssociationCheck {
	margin-right: 5px;
	margin-left: 5px;
	margin-top: 3px;
	float: left;
}
.permissionCheck {
	text-align: left;
	margin-left: 10px;
}

/* NAVIGATION VIEW*/

.navigationTitles {
	background-color:#ffffff;
	border:1px solid #000000;
	display:inline-block;
	color:#000000;
	font-family:arial;
	font-size:13px;
	font-weight:bold;
	padding:6px 10px;
	width:150px;
	text-decoration:none;
	margin-top: 4px;
	margin-bottom: 0px;
}
.navigationTitles:hover {
	background-color:#dfdfdf;
}
.navigationTitles:active {
	position:relative;
	top:1px;
}
	
.navigationClassDirectories {
	font-size: 80%;
	background-color: #d4d6e8;
	display: block;
	margin-left: 4px;
	width: 156px;
	margin-top: 0px;
	text-decoration: none;
	padding: 0px 10px;
	color:#000000;
	border-bottom: 1px solid #f0f0f0;
}
.navigationClassDirectories:hover {
	background-color: #c0c2dc;
}
#navigationHl {
	background: #a0a3c1;
	color: white;
}
#navigationClassHl {
	background: #a0a3c1;
	color: white;
	padding: 6px 12px;
	-moz-box-shadow: 0px 2px 3px #666;
	-webkit-box-shadow: 0px 2px 3px #666;
	box-shadow: 0px 2px 3px #666;
}
.navigationClasses {
	margin-bottom: 5px;
	padding-bottom: 10px;
	border-bottom: 1px solid grey;
}
.globalNav {
	font-size: 10.3pt;
}
.openClass {
	margin-bottom: 5px;
	border-bottom: 1px solid grey;
}
/*
	ANNOUNCEMENT VIEW
				*/
.newAnnouncementWrapper label {
	display:block;
}
.announcementTextarea {
	width: 100%;
	height:80px;
	resize:vertical;
	word-wrap: break-word;
	background-color: white;
}

.nicEdit-main {
	background-color: white;
	margin: 0px;
	word-wrap: break-word;
}

.announcementTitle {

}
.announcementClass {
	text-align: center;
	border-bottom: 1px solid grey;
	font-size: 10pt;
}
.announcementClass a{
	text-decoration:none;
}
.announcementInfo {
	font-size:50%;
}
.announcementBody {
	font-size:80%;
	width:100%;
}
.pastAnnouncement {
	margin-bottom:5px;
	padding:5px;
	position:relative;
}
.editOptionsWrapper {
	position:absolute;
	top:5px;
	right:3px;
}

.editAnnouncementWrapper label {
	display:block;
}
.urgentDiv {
	display: inline;
	float: right;
	margin-right: 20px;
	font-size: 10pt;
}
.urgentDiv input {
	top: 2px;
	position: relative;
}
#cancelButton {
	text-decoration: none;
}

/*
	FILES VIEWS
			*/
.editFolderPrompt {
	display:none;
}
.classFolder {
	position:relative;
	padding:5px;
}
.classFolderEditted {
	border:1px solid black;
	background-color:#A0A3C1;
}

.editFilePrompt {
	display:none;
}
.fileContainer {
	position:relative;
	padding:5px;
}
.fileContainerEditted {
	border:1px solid black;
	background-color:#A0A3C1;
}
.filetypeIcon {
	vertical-align:middle;
	width:18px;
	height:18px;
}
/*
	LABS
		*/
.newLabWrapper label {
	display:block;
}
#labDescriptionField {
	width:767px;
	height:80px;
	resize:vertical;
}
.checkboxLabel {
	display:inline !important;
}
.uploadSettings {
	display:none;
}
.labInfo {
	font-size:50%;
}
.editLabIcon {
	display:inline-block !important;
}
.editLabTeamPrompt {
	display:none;
}
.labTeamNameContainer {
}
.labTeamNameContainerEditted {
}

.labTeamContainer {
	margin-top:20px;
	margin-bottom:10px;
	position:relative;
}
.alternateLabTeamContainer {
	background-color:#E0DEEF;
}
.labTeamName {
	font-weight:bold;
	color:#1B107F;
}
.joinLabTeamContainer {
	position:absolute;
	top:10px;
	right:10px;
}
.file {
	display:inline-block;
}
.user {
	display:inline-block;
}
.teamsWrapper {
	margin-top:35px;
}
/*CLASSES VIEW*/
.classesWrapper {
	width: 500px;
}
#classesHeader {
	border-bottom: 3px solid #9c90f2;
	width: 500px;
}
#classesTitle {
	display: inline;
	margin-right: 350px;
	
}
.classLink {
	text-decoration: none;
}
.classLink:hover {
	text-decoration: underline;
}
#subscribeTitle {
	text-align: right;
	display: inline-block;
}
.semesterTitle {
	margin-top:10px;
	font-size: 120%;
	border-bottom: 1px solid blue;
	margin-bottom: 3px;
	margin-right: 100px;
	padding-right: 80px;
	margin-left: 5px;
	display: inline;
}
.semesterDiv {
	margin-top: 10px;
	margin-bottom: 20px;
}
.semesterClassesDiv {
	display: none;
	margin-top: 10px;
	padding-left: 20px;
}
.subscribeCheck {
	position: relative;
	float: right;
	display: inline;
}
#classCheck {
	position: absolute;
	z-index: 150;
	display: inline;
	top:-15px;
}
#joinImage {
	position: absolute;
	top: -27px;
	left: -8px;
}
.classField {
	margin-bottom: 12px;
}


.editClassAssociationTypes label,.submit {
	display:block;
}
.accountInformationWrapper label,select,.submit{
	display:inline;
}
.selectAll {
	margin-left:5px;
}
.hierarchyNavigationRow {
	background-color:#E0DEEF;
	background-image: -webkit-linear-gradient(right, #FFFFFF, #E0DEEF); 
	background-image:    -moz-linear-gradient(right, #FFFFFF, #E0DEEF);
	background-image:     -ms-linear-gradient(right, #FFFFFF, #E0DEEF);
	background-image:      -o-linear-gradient(right, #FFFFFF, #E0DEEF);
}
.countInput {
	width:30px;
}

/* PROFESSORS VIEW */
.professorListWrapper {
	margin-top: 10px;
	margin-left: 10px;
}
.professorName {
	margin-bottom: 5px;
}
.professorName a {
	text-decoration: none;
}
.professorName a:hover {
	text-decoration: underline;
}
/* TITLES */
.titlesField {
	width:350px;
}
.newTitleSubmit {
	display:inline !important;
}

